@@ -3416,7 +3416,8 @@ order_start <TELUGU>;forward;forward;forward;forward,position
 <U0C15> <t-ka>;<BAS>;<MIN>;IGNORE
 <U0C16> <t-kha>;<BAS>;<MIN>;IGNORE
 <U0C17> <t-ga>;<BAS>;<MIN>;IGNORE
-<U0C7B> <t-gga>;<BAS>;<MIN>;IGNORE
+#XXX This is wrong since there is already a definition for U0C7B.
+#<U0C7B> <t-gga>;<BAS>;<MIN>;IGNORE
 <U0C18> <t-gha>;<BAS>;<MIN>;IGNORE
 <U0C19> <t-nga>;<BAS>;<MIN>;IGNORE
 <U0C1A> <t-ca>;<BAS>;<MIN>;IGNORE
